# vsphere_vm_mcp_server

./: README.md  __init__.py  dev_server.py  main.py  pyproject.toml  server.py
docs/: BEST_PRACTICES.md
src/vsphere_mcp/: __init__.py  server.py
src/vsphere_mcp/client/: __init__.py  vsphere.py
src/vsphere_mcp/models/: __init__.py  base.py  vsphere.py
src/vsphere_mcp/tools/: __init__.py  lifecycle.py  query.py
src/vsphere_mcp/utils/: __init__.py  errors.py  validators.py
